fixed add form spacing

--- a/src/app/home/components/add-task/add-task.component.css
+++ b/src/app/home/components/add-task/add-task.component.css
@@ -13,6 +13,7 @@
 
 .date-container{
     display: flex;
+    justify-content: space-between;
 }
 
 .date-container div{
